# jamovi-mcp

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/assets/: image-prompts.md
src/jamovi_mcp/: __init__.py  __main__.py  analyses.py  config.py  connection.py  engine.py  server.py
src/jamovi_mcp/proto/: jamovi.proto  jamovi_pb2.py
src/jamovi_mcp/tools/: analysis.py  data.py  files.py
tests/: conftest.py  test_config.py  test_connection_save.py  test_data_tools.py
